--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "prettier": "^2.0.5",
+    "axios": "^0.19.2",
+    "react-infinite-scroll-component": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
